unpackaged/main/default/objects/Contact/fields/pse__Utilization_Target__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Target__c</fullName>
    <description>A target percentage of utilization for this resource. For example, a target of 50% for an 8 hour per day work calendar, results in a 4 hour per day target that the resource should be utilized for.</description>
    <inlineHelpText>A target percentage of utilization for this resource. For example, a target of 50% for an 8 hour per day work calendar, results in a 4 hour per day target that the resource should be utilized for.</inlineHelpText>
    <label>Utilization Target</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>