unpackaged/main/default/objects/Contact/fields/pse__Utilization_Target_Average__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Target_Average__c</fullName>
    <formula>IF(pse__Historical_Utilization_Calendar_Hours__c +  pse__Scheduled_Utilization_Calendar_Hours__c = 0,
0,
pse__Utilization_Target_Hours__c / ( pse__Historical_Utilization_Calendar_Hours__c +  pse__Scheduled_Utilization_Calendar_Hours__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization Target Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>