unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Is_Resource__c</columns>
    <columns>pse__Is_Resource_Active__c</columns>
    <columns>Generic_PSA_Resource__c</columns>
    <columns>pse__Historical_Utilization_Billable_Hours__c</columns>
    <columns>pse__Salesforce_User__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Work_Calendar__c</columns>
    <columns>Unique_ID__c</columns>
    <columns>pse__Default_Cost_Rate__c</columns>
    <columns>pse__External_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>