unpackaged/main/default/objects/Contact/listViews/psaws__Resources_Started_in_the_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>psaws__Resources_Started_in_the_Last_30_Days</fullName>
    <columns>FULL_NAME</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Utilization_Target__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__External_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Is_Resource_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Start_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Resources Started in the Last 30 Days</label>
</ListView>